fixtures/runtime/valid/variables/assignment.php
<?php
// runtime-fixture: kind=valid expected_stdout="1\n"
$a = 1;
echo $a, "\n";
