fixtures/runtime/invalid/division-by-zero.php
<?php
// runtime-fixture: kind=invalid expected_rust_status=runtime_error
echo 1 / 0;
